# LLM_Nature_Semantic_Transformer

./: .gitignore  ARCHITECTURE.md  BENCHMARK.md  Cargo.toml  PAPER.md  README.md  benchmark.json  corpus.ndjson  corpus_v2.ndjson  download_model.py  download_model.sh  gpt2_proposer.py  trace_demo.json
artifact/: paragraph.txt
data/: word_universe.tsv
docs/: collapse_principle.md
scripts/: gpt2_proposer.py  gpt2_proposer.py.backup
src/: attention.rs  boolfun.rs  compiler.rs  corpus.rs  digest.rs  discourse.rs  edges.rs  exec.rs  features.rs  feedforward.rs  geom.rs  layer.rs  lib.rs  main.rs  main.rs.backup  main.rs.backup2  morpheme.rs  onnx_proposer.rs  phoneme.rs  phrase.rs  proposer.rs  qe.rs  semantic.rs  semtrace.rs  sig_index.rs  syllable.rs  tower.rs  training.rs  transformer.rs  verify.rs  word.rs
src/gpt2/: mod.rs
train/: eval.py  export.py  generate_rejection_corpus.py  model.onnx  model.py  model_ps.pt  model_rl.pt  model_v2.pt  model_v3.onnx  model_v3_il.pt  model_v3_ps.pt  model_v4.onnx  model_v4.pt  process_supervision.py  rl_train.py  train.py  train_v3.py
training_data/: manifest.json  splits.json
