[package]
name = "llm_nature_semantic_transformer"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
pretty_assertions = "1"
