[package]
name = "llm_nature_semantic_transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
anyhow = "1.0"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
hf-hub = "0.5.0"
serde_json = "1.0.149"
tokenizers = "0.22.2"
sha2 = "0.10"
regex = "1.10"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
