[package]
name = "llm_nature_semantic_transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
time = { version = "0.3", features = ["formatting"] }
anyhow = "1.0"
serde_json = "1.0.149"
sha2 = "0.10"
regex = "1.10"
chrono = "0.4.44"
clap    = { version = "4.5.60", features = ["derive"] }
ort     = { version = "2.0.0-rc.12", features = ["download-binaries", "load-dynamic"] }

